--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </div> 
 
         <aside>
+        <div id = "report"></div>
         <div id = "wins">Wins: </div>
         <br>
         <br>
-        <br>
-        <br>
         <div id = "losses">Losses:</div>
+    
         </aside>
 
     </div>
