added link back to portfolio

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             </section>
   
     </div>
+    
+    <a id="portfolio-link" class="a" href="https://mhmeluskey.github.io/MeganMeluskeyPortfolio/portfolio.html"> Back to Portfolio  </a>
 
 
  
